fix: visible delete button

--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -3,6 +3,11 @@
   flex-direction: column;
 }
 
+.movies-card:hover .movies-card__favorite_delete {
+  visibility: visible;
+  opacity: 1;
+}
+
 .movies-card__image-wrapper {
   width: 270px;
   height: 150px;
@@ -59,18 +64,11 @@
   padding: 0;
   cursor: pointer;
   opacity: 0;
+  visibility: hidden;
 }
 
 .movies-card__favorite_delete:hover {
-  height: 24px;
-  width: 24px;
-  background: url("../../images/delete.svg") center no-repeat;
-  border: none;
-  border-radius: 50%;
-  margin: 0;
-  padding: 0;
   cursor: pointer;
-  opacity: 1;
 }
 
 .movies-card__duration {
@@ -112,5 +110,10 @@
   .movies-card__duration {
     font-size: 10px;
     line-height: 12px;
+  }
+
+  .movies-card__favorite_delete {
+    opacity: 1;
+    visibility: visible;
   }
 }
